# SSIS-Depreciation

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CHANGES-cir-models.md  CHANGES-deterministic-engine.md  CHANGES-llm-pipeline.md  CHANGES-parser.md  CHANGES-pipeline-codegen.md  CHANGES-scaffold.md  GENERATION.md  GitHub_Copilot_Chat.postman_collection.json  RESILIENCE.md  SCORING.md  pyspark-version-analysis.md
samples/: ETL_Load_Customers.dtsx  ETL_Load_Orders.dtsx
ssis_migration/: __init__.py  cli.py  config.py  inventory.py  pipeline.py  resilience.py  scoring.py
ssis_migration/cir/: __init__.py  models.py  type_mapping.py
ssis_migration/codegen/: __init__.py  generator.py
ssis_migration/codegen/templates/: airflow_dag.py.j2  module.py.j2  test_module.py.j2
ssis_migration/parser/: __init__.py  complexity_scorer.py  dtsx_parser.py  ns.py
ssis_migration/parser/extractors/: __init__.py  connections.py  control_flow.py  data_flow.py  event_handlers.py  parameters.py  variables.py
ssis_migration/transform/: __init__.py  routing.py
ssis_migration/transform/deterministic/: __init__.py  component_mapper.py  engine.py  expression_translator.py  sql_transpiler.py
ssis_migration/transform/llm/: __init__.py  (+9 more)
ssis_migration/validation/: __init__.py  report.py  semantic.py  static.py
tests/: test_chunked_generation.py  test_chunking.py  test_client_hardening.py  test_codegen_quality.py  test_parser.py  test_parser_completeness.py  test_parser_spectrum.py  test_repair.py  test_resilience.py  test_routing.py  test_scoring.py
