[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ssis-migration"
version = "0.1.0"
description = "Enterprise SSIS-to-PySpark Migration Framework"
requires-python = ">=3.10"
dependencies = [
    "lxml>=5.1",
    "sqlglot>=23.0",
    "jinja2>=3.1",
    "pydantic>=2.6",
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",          # GitHub Copilot chat endpoint
    "black>=24.0",
    "isort>=5.13",
    "pylint>=3.1",
]

[project.optional-dependencies]
llm = [
    "chromadb>=0.4",         # RAG vector store
    "sentence-transformers>=3.0",
]
validation = [
    "great-expectations>=0.18",
    "pyspark>=3.3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
ssis-migrate = "ssis_migration.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ssis_migration*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
